# DataQuality

./: README.md
DQ_Tool/: .env.example  .gitattributes  .gitignore  pyproject.toml  run.ps1
DQ_Tool/dq_engine/: db_connection.py  dq_engine.py  dq_logging.py  dq_persistence.py  sql_generators.py
DQ_Tool/dq_engine/tests/: __init__.py  conftest.py  run_parallel_rules.py  run_sample_rule.py  run_session_example.py  test_connection_pool.py  test_execute_rule.py  test_execute_session.py  test_sql_generators.py
DQ_Tool/dq_engine/tests/integration/: conftest.py  phase1_verification.py  seed_integration_data.sql  setup_integration_env.ps1  test_all_rules_dev.py  test_execute_session_dev.py  test_rule_violations_dev.py
DQ_Tool/dq_engine/tests/unit/: conftest.py  test_json_roundtrip.py  test_result_parsing.py  test_sql_generators.py  test_utils.py
DQ_Tool/dq_tool/: main.py  paths.py  settings.py
DQ_Tool/dq_tool/adapters/: external_path_source.py  sql_source_adapter.py
DQ_Tool/dq_tool/api/: dto.py  services.py
DQ_Tool/dq_tool/discovery/: candidate_builder.py  deduplicator.py  relationship_inference.py  scanner.py  sql_parser.py
DQ_Tool/dq_tool/engine/: rule_executor.py  rule_types.py  session_runner.py
DQ_Tool/dq_tool/logging/: log_config.py
DQ_Tool/dq_tool/persistence/: db_pool.py  rules_repo.py  sessions_repo.py  violations_repo.py
DQ_Tool/dq_tool/reports/: discovery_report.py
DQ_Tool/dq_tool/ui/: app.py
DQ_Tool/tests/: test_candidate_builder.py  test_deduplicator.py  test_parser.py  test_rule_executor.py  test_scanner.py  test_services.py
(+15 files in other folders)
